# grimp-tools

./: CLAUDE.md  README.md  pyproject.toml
.github/: release.yml
.github/workflows/: publish.yml
docs/proposals/: app-graph.md
src/grimp_tools/: __main__.py  analyze.py  app_graph.py  check_names.py  cli.py  config.py  contracts_graph.py  coupling_contract.py  focus.py  graph.py  html.py  snapshot.py
src/grimp_tools/templates/: page.html
tests/: test_analyze.py  test_app_graph.py  test_check_names.py  test_config.py  test_contracts_graph.py  test_coupling_contract.py  test_focus.py  test_graph.py  test_html.py  test_snapshot.py
